// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Block should render Default 1`] = `
<DocumentFragment>
  <figure
    class="css-7tufii e1il1x350"
  >
    <img
      alt="An image description"
      class="css-1a2v9hb e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
      title="An image title"
      width="500"
    />
    <figcaption>
      Image caption
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithClassName 1`] = `
<DocumentFragment>
  <figure
    class="extra-classname css-7tufii e1il1x350"
  >
    <img
      alt="An image description"
      class="css-1a2v9hb e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
      title="An image title"
      width="500"
    />
    <figcaption>
      Image caption
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithEmotion 1`] = `
<DocumentFragment>
  <figure
    class="css-7tufii e1il1x350"
  >
    <img
      alt="An image description"
      class="css-1a2v9hb e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
      title="An image title"
      width="500"
    />
    <figcaption>
      Image caption
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithoutCaption 1`] = `
<DocumentFragment>
  <figure
    class="css-7tufii e1il1x350"
  >
    <img
      alt="An image description"
      class="css-1a2v9hb e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
      title="An image title"
      width="500"
    />
  </figure>
</DocumentFragment>
`;
